change names, descriptions, assets

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -65,7 +65,7 @@ body {
         width: 16px;
         height: 14px;
         background-position: center;
-        background-image: url(../images/und.png);
+        background-image: url(../images/unification.png);
         background-repeat: no-repeat;
         background-size: 16px 5px;
       }
