images and styling

--- a/src/assets/scss/custom-vars.scss
+++ b/src/assets/scss/custom-vars.scss
@@ -2,10 +2,10 @@
 
 $primary:       #014270;
 $secondary:     #6c757d;
-$success:       #12c702;
-$info:          #0174C7;
-$warning:       #c75402;
-$danger:        #dc3545;
+$success:       #42a85f;
+$info:          #2d6ba6;
+$warning:       #f48a06;
+$danger:        #e54d42;
 $light:         #f8f9fa;
 $dark:          #343a40;
 
