minor tweaks and fixes

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -156,3 +156,20 @@ body {
   margin: 5px auto 5px;
   display: block;
 }
+
+.modal-header {
+  color: white;
+  background: #2d6ba6;
+  border-left: 10px solid #163552;
+  border-radius: 0;
+}
+
+.modal-content {
+  border: 0px;
+  border-radius: 0;
+}
+
+.modal-body {
+  border: 0px;
+  border-radius: 0;
+}
