Add a new "Recovery" tab for displaying the private key

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -152,6 +152,10 @@ body {
   font-family: "Lucida Console", Monaco, monospace
 }
 
+.private_key {
+  font-family: "Lucida Console", Monaco, monospace
+}
+
 .img-centre {
   margin: 5px auto 5px;
   display: block;
